fix: update dropdown background color for improved visibility

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .dropDown {
-  background-color: #0d5678;
+  background-color: #0d5678b6;
 }
 
 .active {
